--- a/WebAppMVC.csproj
+++ b/WebAppMVC.csproj
@@ -7,7 +7,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Contato\Criar.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\Contato\Criar.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Contato\Criar.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Views\Contato\Criar.cshtml" />
   </ItemGroup>
 
 </Project>
