Adição de popup para excluir contato

--- a/WebAppMVC.csproj
+++ b/WebAppMVC.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Content Remove="Views\Contato\Criar.cshtml" />
+    <Content Remove="Views\Contato\_popUpApagar.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -20,10 +21,16 @@
 
   <ItemGroup>
     <_ContentIncludedByDefault Remove="Views\Contato\Criar.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\Contato\_popUpApagar.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
     <None Include="Views\Contato\Criar.cshtml" />
+    <None Include="Views\Contato\_popUpApagar.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\Contato\_popUpApagar.cshtml" />
   </ItemGroup>
 
 </Project>
