Atualizações para controle de perfis, validações JS e repositorio para Usuario

--- a/WebAppMVC.csproj
+++ b/WebAppMVC.csproj
@@ -20,6 +20,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Views\Contato\_popUpApagar.cshtml" />
+    <None Include="Views\Shared\_popUpApagar.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
